# hailstorm

./: hailstorm.cabal
src/: HailstormCLI.hs
src/Hailstorm/: Runner.hs
src/Hailstorm/InputSource/: KafkaSource.hs
src/Hailstorm/Processor/: Downstream.hs  Spout.hs
src/Hailstorm/Sample/: WordCountKafkaEmitter.hs  WordCountSample.hs
